update welcome and add on thinking

--- a/src/content/blog/Welcome.mdx
+++ b/src/content/blog/Welcome.mdx
@@ -9,4 +9,5 @@ draft: false
 # Welcome
 In the first place, this blog doesn't have an explicit purpose or direction. Really, it's a place for me to talk about things that I find interesting or that I have been thinking about a lot, but can't really bring up in conversation with the people I would normally talk to. Hopefully, it will be clear why exactly that is. In some sense, these articles will be a one-sided conversation. A lecture, perhaps, but less formal. Like I said, I just want to talk about stuff without having to necessarily be engaging enough to warrant ignoring a conversation partner and launching into a long diatribe about the thing I want to say. The format also allows me to be more considerate of my words, though I'm trying to be as candid as possible. I expect many articles will go through a rotation of being archived as I no longer enjoy reading them, or as my writing gets better and the older stuff becomes worse by comparison.  
 I would hope also that no reader makes the mistake of expecting any sense of consistency. For one, this is a side project; I'm a full-time student, among other things, and this is a low priority thing that I'm doing when I can, or when I feel like it. For another, my opinions are likely to change based on the day and what I've last read, and I mean this blog to be entirely honest. What this means is that I might seem to have entirely different perspectives or thoughts on the same thing on different days -- do not take this to be a self-contradiction or evidence I have been obscure; on the contrary, it means that I have simply changed or slightly shifted my thinking on it.  
+To explain the tags system: One or more tags are about content, and there will always be a research tag. The research tag will let you know how much research to expect, in terms of citations and depth of factual understanding. For non-research articles, like this one, there will be no research involved, probably because it's not relevant. I don't need to cite sources when I'm introducing my blog. For light-research articles, there will be a couple links, some references, but mostly the information and thoughts will be off the top of my head. I may make some factual errors or oversimplify someone else's point, but hopefully it will be fine in broad strokes. This is the category for most of my casual philosophy or general thought articles. For heavy-research articles, I expect most facts to be correct, lots of external links, extensive reading and analysis of something. I sometimes just do research projects, but also if I write something for school it will likely go here.    
 I plan on coming out with my first article today. I hope you enjoy it.
